# leptos-ws-pro

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  BETA_RELEASE_SUMMARY.md  CHANGELOG.md  CHANGELOG_BETA.md  COMPILATION_ERRORS_REMEDIATION_PLAN.md  CRATES_IO_PUBLISH_INSTRUCTIONS.md  Cargo.toml  GITHUB_RELEASE.md  LEPTOS_V0.8_UPGRADE_SUMMARY.md  LICENSE  README.md  README_BETA.md  RELEASE_SUMMARY.md  REMEDIATION_SUCCESS_SUMMARY.md  ROADMAP.md  TDD_PHASE1_PLAN.md  TDD_PHASE2_PLAN.md  TDD_PHASE3_PLAN.md  TESTING_SUMMARY.md  V1_TDD_IMPLEMENTATION_ROADMAP.md  V1_TDD_STATUS_REPORT.md  build_rs_cov.profraw  deny.toml  migrate-to-new-repo.sh  package-lock.json  package.json  playwright.config.ts
.github/workflows/: ci.yml
api/contracts/: contract-testing-config.yaml  leptos-ws-pro-api-v1.yaml
api/schemas/: message-schema.json  rpc-request-schema.json  rpc-response-schema.json  transport-config-schema.json
api/versions/: v1-api-contract.md
coverage/: tarpaulin-report.html
docs/: ACKNOWLEDGMENTS.md  CODE_REFACTORING_PLAN.md  COMPONENT_REMEDIATION_LARGE_FILES.md  COMPONENT_REMEDIATION_RPC.md  COMPONENT_REMEDIATION_SECURITY.md  COMPONENT_REMEDIATION_SSE.md  COMPONENT_REMEDIATION_STUBS.md  COMPONENT_REMEDIATION_TRANSPORT.md  COMPONENT_REMEDIATION_WASM.md  COMPONENT_REMEDIATION_WEBTRANSPORT.md  COMPREHENSIVE_REMEDIATION_PLAN.md  COMPREHENSIVE_TESTING_COMPLETE.md  CONTRACT_TESTING_ASSESSMENT.md  CRITICAL_ASSESSMENT_SEPT_2025.md  DEPENDENCY_UPDATE_PLAN.md  FILE_BREAKDOWN_STRATEGY.md  FINAL_MIGRATION_SUMMARY.md  FINAL_PROFESSIONAL_REPOSITORY.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_SUMMARY.md  LEPTOS_V0.8_UPGRADE_SUMMARY.md  LLM_GENERATION_NOTES.md  ORGANIZATION_COMPLETE.md  P0_FIXES_COMPLETED.md  PRODUCTION_DEPLOYMENT.md  PROJECT_STRUCTURE.md  README.md  REALITY_CHECK_ASSESSMENT.md  REFACTORING_PROGRESS.md  REMEDIATION_COMPLETION_SUMMARY.md  REMEDIATION_PLAN.md  REMEDIATION_SUMMARY.md  REPOSITORY_MIGRATION_PLAN.md  TESTING_ROADMAP.md  TESTING_SUMMARY.md  TEST_COVERAGE_ASSESSMENT.md  WORLD_CLASS_ARCHITECTURE_SUMMARY.md  contract-testing.md
docs/design/: adaptive_transport.md  error_handling_design.md  error_recovery_system.md  integration_testing.md  optimized_transport_split_fix.md  performance_layer_design.md  performance_optimization.md  reactive_integration_design.md  rpc_client_design.md  rpc_implementation.md  rpc_system_design.md  security_integration.md  security_layer.md  security_layer_design.md  sse_client_design.md  sse_implementation.md  test_suite_remediation.md  transport_implementation.md  transport_layer_design.md  websocket_client_design.md  websocket_implementation.md  websocket_send_receive_fix.md  webtransport_implementation.md  zero_copy_implementation.md  zero_copy_serialization.md  zero_copy_serialization_fix.md
examples/: README.md
examples/axum/: Cargo.toml
examples/axum/src/: app.rs
examples/basic/: websocket-basic.rs  websocket-connection.rs
examples/demo-axum/: Cargo.toml
examples/demo-axum/src/: app.rs
scripts/: prepare_release.sh
src/: axum.rs  client_signal.rs  client_signals.rs  error.rs  error_handling.rs  lib.rs  messages.rs  monitoring.rs  performance.rs  security.rs  server_signal.rs  server_signals.rs  zero_copy.rs
src/codec/: mod.rs
src/collaboration/: mod.rs
src/error_handling/: circuit_breaker.rs  mod.rs  recovery.rs  types.rs
src/metrics/: mod.rs
src/middleware/: mod.rs
src/monitoring/: alerts.rs  health.rs  metrics.rs  mod.rs  system.rs
src/performance/: cache.rs  connection_pool.rs  manager.rs  message_batcher.rs  metrics.rs  middleware.rs  mod.rs
src/reactive/: config.rs  hooks.rs  mod.rs  presence.rs  websocket.rs
src/resilience/: mod.rs
src/rpc/: advanced.rs  client.rs  correlation.rs  mod.rs  types.rs
src/security/: authenticator.rs  manager.rs  middleware.rs  mod.rs  rate_limiter.rs  validator.rs
src/server_signal/: mod.rs  signal.rs  traits.rs
src/transport/: adaptive.rs  mod.rs  optimized.rs  sse.rs  websocket.rs  webtransport.rs  webtransport_real.rs
src/transport/sse/: client.rs  config.rs  connection.rs  events.rs  mod.rs  reconnect.rs  (+1 more)
src/zero_copy/: benchmark.rs  buffer.rs  codec.rs  mod.rs
tests/: README.md  coverage_improvement_tests.rs  quick_validation.rs
tests/common/: mod.rs
tests/contract/: api_contract_tests.rs  backward_compatibility_tests.rs  schema_validation_tests.rs  schema_validation_tests_fixed.rs
tests/e2e/: README.md  integration.spec.ts  test-runner.js  user-journey.spec.ts  websocket.spec.ts
tests/integration/: end_to_end_integration_tests.rs  end_to_end_tests.rs  example_integration_tests.rs  integration_tests.rs  optimized_transport_integration_tests.rs  real_network_tests.rs  real_websocket_tests.rs  rpc_integration_tests.rs  sse_integration_tests.rs  v1_integration_tests.rs  websocket_integration_tests.rs  websocket_send_receive_tests.rs  webtransport_tests.rs
tests/load/: load-testing.spec.ts
tests/server/: mod.rs  server_integration_tests.rs
tests/unit/: adaptive_transport_tests.rs  advanced_features_tests.rs  advanced_rpc_simple_tests.rs  advanced_rpc_tests.rs  advanced_transport_tdd_tests.rs  basic_compilation_test.rs  codec_comprehensive_tests.rs  compilation_warnings_tests.rs  complex_error_recovery_tdd_tests.rs  comprehensive_transport_tests.rs  load_testing_tests.rs  performance_benchmark_tests.rs  performance_edge_cases_tdd_tests.rs  reactive_comprehensive_tests.rs  real_network_integration_tests.rs  real_rpc_correlation_tests.rs  real_sse_network_tests.rs  real_websocket_implementation_tests.rs  real_websocket_network_tests.rs  real_webtransport_network_tests.rs  rpc_comprehensive_tests.rs  rpc_system_tests.rs  simple_error_recovery_tests.rs  sse_implementation_tests.rs  stress_testing_tests.rs  tdd_examples.rs  transport_comprehensive_tests.rs  transport_layer_comprehensive_tests.rs  transport_layer_tests.rs  v1_core_codec_tests.rs  v1_core_reactive_tests.rs  v1_core_rpc_tests.rs  v1_core_transport_tests.rs  wasm_implementation_tests.rs  websocket_connection_tests.rs  webtransport_implementation_tests.rs  webtransport_real_tests.rs
(+17 files in other folders)
